--- a/templates/githubissue.mustache
+++ b/templates/githubissue.mustache
@@ -1,5 +1,5 @@
 <a href="{{user.html_url}}">
-<img src="{{avatar}}" class="thumbnail">
+<img src="{{avatar}}" class="thumbnail onebox-avatar">
 </a>
 
 <h4><a href="{{link}}" target="_blank">{{title}}</a></h4>
