--- a/app/assets/stylesheets/desktop/topic-post.scss
+++ b/app/assets/stylesheets/desktop/topic-post.scss
@@ -550,7 +550,7 @@ iframe {
   a.star {
     margin-right: 7px;
     font-size: 20px;
-    margin-top: 6px;
+    margin-top: 10px;
     color: dark-light-diff($secondary, $primary, 80%, -20%) !important;
 
   }
@@ -561,11 +561,18 @@ iframe {
   }
 
   .badge-category {
+    border-left: 5px solid;
+    border-color: #aaa;
+    font-weight: normal;
+    text-transform: lowercase;
+    padding: 0 0 0 5px;
+    margin: 0 5px 0 1px;
     vertical-align: top;
-    margin-top: 2px;
+
+  }
+
+  .title-wrapper {
     float: left;
-    margin-right: 5px;
-    display: none;
   }
 
 }
