Update highlight.pack.js, move HLJS styles to vendor folder

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -2,6 +2,7 @@
 @import "common/foundation/helpers";
 @import "common/foundation/base";
 @import "vendor/font_awesome/font-awesome";
+@import "vendor/hljs";
 @import "vendor/select2";
 @import "common/foundation/mixins";
 @import "common/foundation/variables";
