--- a/templates/githubcommit.mustache
+++ b/templates/githubcommit.mustache
@@ -1,6 +1,6 @@
 {{#author.avatar_url}}
   <a href="{{author.html_url}}" target="_blank">
-    <img alt="{{author.login}}" src="{{author.avatar_url}}" class="thumbnail onebox-avatar">
+    <img alt="{{author.login}}" src="{{author.avatar_url}}" class="thumbnail onebox-avatar" width="90" height="90">
   </a>
 {{/author.avatar_url}}
 
