squash! Support custom config of Highlight language support
Add current config key to highlight.js URL passed to the client.

This allows for easy proxying of the resource in a front end server.

Controller support any 'config key' and redirects to the new key
if the config has been updated.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     <%= script "preload_store" %>
     <%= script "locales/#{I18n.locale}" %>
     <%= script "vendor" %>
-    <%= script "highlight" %>
+    <%= script HighlightController.generate_path %>
     <%= script "application" %>
     <%- if staff? %>
       <%= script "admin"%>
