--- a/app/assets/javascripts/admin/templates/users_list.hbs
+++ b/app/assets/javascripts/admin/templates/users_list.hbs
@@ -38,7 +38,7 @@
   </div>
 
   {{#if loading}}
-    <div class='spinner'></div>
+    <div class='spinner-wrap'><div class='spinner'><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></div></div>
   {{else}}
     {{#if model.length}}
       <table class='table'>
