--- a/app/assets/javascripts/discourse/templates/user/posts.hbs
+++ b/app/assets/javascripts/discourse/templates/user/posts.hbs
@@ -27,5 +27,5 @@
   </div>
 {{/each}}
 {{#if loading}}
-  <div class='spinner'></div>
+  <div class='spinner-wrap'><div class='spinner'><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></div></div>
 {{/if}}
