--- a/app/assets/javascripts/admin/templates/flags.hbs
+++ b/app/assets/javascripts/admin/templates/flags.hbs
@@ -9,7 +9,7 @@
 
 <div class="admin-container">
   {{#if loading}}
-    <div class='spinner'></div>
+    <div class='spinner-wrap'><div class='spinner'><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></div></div>
   {{else}}
     {{#if length}}
       <table class='admin-flags'>
@@ -160,7 +160,7 @@
         </tbody>
       </table>
       {{#if view.loading}}
-        <div class='spinner'></div>
+        <div class='spinner-wrap'><div class='spinner'><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></div></div>
       {{/if}}
 
     {{else}}
