--- a/app/assets/javascripts/admin/templates/user_badges.hbs
+++ b/app/assets/javascripts/admin/templates/user_badges.hbs
@@ -7,7 +7,7 @@
 </div>
 
 {{#if loading}}
-  <div class='spinner'></div>
+  <div class='spinner-wrap'><div class='spinner'><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></div></div>
 {{else}}
   <div class='admin-container user-badges'>
     <h2>{{i18n admin.badges.grant_badge}}</h2>
