--- a/app/assets/javascripts/discourse/templates/topic.hbs
+++ b/app/assets/javascripts/discourse/templates/topic.hbs
@@ -73,7 +73,7 @@
           {{render 'topic-progress'}}
 
           {{#if postStream.loadingAbove}}
-            <div class='spinner'></div>
+            <div class='spinner-wrap'><div class='spinner'><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></div></div>
           {{/if}}
 
           {{#unless postStream.loadingFilter}}
@@ -90,7 +90,7 @@
           {{/unless}}
 
           {{#if postStream.loadingBelow}}
-            <div class='spinner'></div>
+            <div class='spinner-wrap'><div class='spinner'><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></div></div>
           {{/if}}
         </div>
         <div id='topic-bottom'></div>
@@ -137,13 +137,13 @@
         {{/if}}
       </div>
       {{#if retrying}}
-        <div class='spinner'></div>
+        <div class='spinner-wrap'><div class='spinner'><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></div></div>
       {{/if}}
     {{/if}}
     </div>
   {{else}}
     <div class='container'>
-      <div class='spinner'></div>
+      <div class='spinner-wrap'><div class='spinner'><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></div></div>
     </div>
   {{/if}}
 {{/if}}
