--- a/app/assets/javascripts/discourse/templates/user/invited.hbs
+++ b/app/assets/javascripts/discourse/templates/user/invited.hbs
@@ -70,7 +70,7 @@
         {{/each}}
       </table>
       {{#if invitesLoading}}
-        <div class='spinner'></div>
+        <div class='spinner-wrap'><div class='spinner'><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></div></div>
       {{/if}}
 
     {{else}}
