--- a/app/assets/javascripts/discourse/templates/user/notifications.hbs
+++ b/app/assets/javascripts/discourse/templates/user/notifications.hbs
@@ -23,7 +23,7 @@
 {{/each}}
 
 {{#if loading}}
-  <div class='spinner'></div>
+  <div class='spinner-wrap'><div class='spinner'><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></div></div>
 {{/if}}
 {{#unless canLoadMore}}
   <div class='end-of-stream'></div>
