--- a/app/assets/javascripts/discourse/templates/user/stream.hbs
+++ b/app/assets/javascripts/discourse/templates/user/stream.hbs
@@ -26,5 +26,5 @@
   </div>
 {{/grouped-each}}
 {{#if loading}}
-  <div class='spinner'></div>
+  <div class='spinner-wrap'><div class='spinner'><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></div></div>
 {{/if}}
