trying out a new css-only loading spinner

--- a/app/assets/javascripts/admin/templates/email_preview_digest.hbs
+++ b/app/assets/javascripts/admin/templates/email_preview_digest.hbs
@@ -19,7 +19,7 @@
 </div>
 
 {{#if loading}}
-  <div class='spinner-wrap'><div class='spinner'><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></div></div>
+  {{loading-spinner}}
 {{else}}
   {{#if showHtml}}
     {{{html_content}}}
