--- a/app/assets/javascripts/discourse/templates/discovery.hbs
+++ b/app/assets/javascripts/discourse/templates/discovery.hbs
@@ -11,7 +11,7 @@
 </div>
 
 <div {{bind-attr class="loadingSpinner::hidden"}}>
-  <div class='spinner-wrap'><div class='spinner'><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></div></div>
+  {{loading-spinner}}
 </div>
 
 
