--- a/app/assets/javascripts/discourse/templates/group/members.hbs
+++ b/app/assets/javascripts/discourse/templates/group/members.hbs
@@ -1,24 +1,26 @@
-{{#if model}}
-  <p>
-    SOME INSTRUCTIONS HERE
-  </p>
+<div class="group-membership">
   {{#if canManageGroup}}
-  <p>
-    {{user-selector usernames=emailOrUsername placeholderKey="admin.groups.selector_placeholder" tabindex="1" disabled=automatic}}
-    <button {{action "addMember"}} {{bind-attr disabled="disableSave"}} class='btn'>{{i18n admin.groups.selector_placeholder}}</button>
-  </p>
+  <div class="clearfix">
+    {{user-selector usernames=add_usernames tabindex="1"}}
+    <button {{action "addMembers"}} {{bind-attr disabled="disableSave"}} class='btn' tabindex="2">{{i18n admin.groups.selector_placeholder}}</button>
+  </div>
   {{/if}}
 
   <table class='group-members'>
-    {{! <tr> }}
-    {{!   <th colspan="3" class="seen">{{i18n last_seen}\}</th> }}
-    {{! </tr> }}
+    <thead>
+      <tr>
+        <th colspan=4></th>
+        <th class="seen">
+          {{i18n last_seen}}
+        </th>
+      </tr>
+    </thead>
     <tbody>
       {{#each model itemController="group/member"}}
-      <tr id="member-{{unbound username}}">
+      <tr class='group-member'>
         {{#if canManageGroup}}
           <td class='action'>
-            <span class='remove' {{action "removeMe"}}><i class='fa fa-times'></i> remove</span>
+            <span class='remove' {{action "removeMe"}}><i class='fa fa-times'></i> {{i18n admin.groups.delete}}</span>
           </td>
         {{/if}}
         <td class='avatar'>
@@ -37,4 +39,4 @@
       {{/each}}
     </tbody>
   </table>
-{{/if}}
+</div>
