--- a/app/assets/javascripts/discourse/templates/group/members.hbs
+++ b/app/assets/javascripts/discourse/templates/group/members.hbs
@@ -9,7 +9,7 @@
   <table class='group-members'>
     <thead>
       <tr>
-        <th colspan=4></th>
+        <th colspan=3></th>
         <th class="seen">
           {{i18n last_seen}}
         </th>
@@ -18,11 +18,6 @@
     <tbody>
       {{#each model itemController="group/member"}}
       <tr class='group-member'>
-        {{#if canManageGroup}}
-          <td class='action'>
-            <span class='remove' {{action "removeMe"}}><i class='fa fa-times'></i> {{i18n admin.groups.delete}}</span>
-          </td>
-        {{/if}}
         <td class='avatar'>
           {{avatar this imageSize="medium"}}
         </td>
@@ -35,6 +30,11 @@
         <td>
           <span class='last-seen-at'>{{bound-date last_seen_at}}</span>
         </td>
+        {{#if canManageGroup}}
+          <td>
+            <button {{action "removeMe"}} class='btn btn-danger fa fa-trash-o'></button>
+          </td>
+        {{/if}}
       </tr>
       {{/each}}
     </tbody>
