--- a/app/assets/javascripts/discourse/templates/share_link.hbs
+++ b/app/assets/javascripts/discourse/templates/share_link.hbs
@@ -1,5 +1,5 @@
 {{#if s.openInPopup}}
-  <a href {{action "sharePopup" s.target s.href}} {{bind-attr title="title"}}><i {{bind-attr class=":fa s.iconClass"}}></i></a>
+  <a href {{action "sharePopup" s.target s.href}} {{bind-attr title="title"}}>{{{s.serviceIcon}}}</a>
 {{else}}
-  <a {{bind-attr href="s.href"}} {{bind-attr title="s.title"}} target="_blank"><i {{bind-attr class=":fa s.iconClass"}}></i></a>
+  <a {{bind-attr href="s.href"}} {{bind-attr title="s.title"}} {{bind-attr class="s.target"}} target="_blank">{{{s.serviceIcon}}}</a>
 {{/if}}
