--- a/app/assets/javascripts/discourse/templates/group/members.hbs
+++ b/app/assets/javascripts/discourse/templates/group/members.hbs
@@ -2,7 +2,7 @@
   {{#if canManageGroup}}
   <div class="clearfix">
     {{user-selector usernames=add_usernames tabindex="1"}}
-    <button {{action "addMembers"}} {{bind-attr disabled="disableSave"}} class='btn' tabindex="2">{{i18n admin.groups.selector_placeholder}}</button>
+    <button {{action "addMembers"}} {{bind-attr disabled="disableSave"}} class='btn' tabindex="2">{{i18n 'admin.groups.selector_placeholder'}}</button>
   </div>
   {{/if}}
 
@@ -11,24 +11,24 @@
       <tr>
         <th colspan=3></th>
         <th class="seen">
-          {{i18n last_seen}}
+          {{i18n 'last_seen'}}
         </th>
       </tr>
     </thead>
     <tbody>
-      {{#each model itemController="group/member"}}
+      {{#each m in model itemController="group/member"}}
       <tr class='group-member'>
         <td class='avatar'>
-          {{avatar this imageSize="medium"}}
+          {{avatar m imageSize="medium"}}
         </td>
         <td>
-          <span class='username'>{{#link-to 'user' this}}{{unbound username}}{{/link-to}}</span>
+          <span class='username'>{{#link-to 'user' m}}{{unbound m.username}}{{/link-to}}</span>
         </td>
         <td>
-          <span class='fullname'>{{unbound name}}</span>
+          <span class='fullname'>{{unbound m.name}}</span>
         </td>
         <td>
-          <span class='last-seen-at'>{{bound-date last_seen_at}}</span>
+          <span class='last-seen-at'>{{bound-date m.last_seen_at}}</span>
         </td>
         {{#if canManageGroup}}
           <td>
