FIX: Split link watched words from replace
It was not clear that replace watched words can be used to replace text
with URLs. This introduces a new watched word type that makes it easier
to understand.

--- a/app/assets/javascripts/admin/addon/templates/modal/admin-watched-word-test.hbs
+++ b/app/assets/javascripts/admin/addon/templates/modal/admin-watched-word-test.hbs
@@ -5,7 +5,7 @@
     <p>
       {{i18n "admin.watched_words.test.found_matches"}}
       <ul>
-        {{#if isReplace}}
+        {{#if (or isReplace isLink)}}
           {{#each matches as |match|}}
             <li>
               <span class="match">{{match.match}}</span>
