FIX: Use tag-chooser instead of simple input

--- a/app/assets/stylesheets/common/admin/staff_logs.scss
+++ b/app/assets/stylesheets/common/admin/staff_logs.scss
@@ -396,6 +396,9 @@ table.screened-ip-addresses {
   input.watched-word-input-field {
     min-width: 300px;
   }
+  .select-kit.multi-select.watched-word-input-field {
+    width: 300px;
+  }
 }
 
 // Search logs
