UX: Use icons as bulleted list in invite modal

--- a/app/assets/stylesheets/common/base/modal.scss
+++ b/app/assets/stylesheets/common/base/modal.scss
@@ -832,7 +832,7 @@
 .create-invite-modal,
 .share-topic-modal {
   .input-group {
-    margin-bottom: 1em;
+    margin-bottom: 0.5em;
 
     &:last-child {
       margin-bottom: 0;
@@ -841,24 +841,24 @@
     input[type="text"] {
       width: 100%;
     }
-  }
 
-  .invite-type {
-    input[type="checkbox"] {
-      display: inline;
-      vertical-align: middle;
-      margin-top: -1px;
+    textarea#invite-message,
+    &.invite-to-topic input[type="text"],
+    .group-chooser,
+    .user-chooser,
+    .future-date-input-selector {
+      margin-left: 25px;
+      width: calc(100% - 25px);
     }
 
-    label {
-      display: inline-block;
+    &.invite-to-topic input[type="radio"] {
+      margin-left: 10px;
     }
-  }
 
-  .group-chooser,
-  .user-chooser,
-  .future-date-input-selector {
-    width: 100%;
+    label .d-icon {
+      color: var(--primary-medium);
+      margin-right: 10px;
+    }
   }
 
   .input-group input[type="text"],
@@ -868,15 +868,21 @@
     height: 34px;
   }
 
-  .input-group .btn {
-    vertical-align: top;
-  }
-
   .invite-input-with-button {
     display: flex;
 
     .btn {
       margin-left: 3px;
+    }
+  }
+
+  .input-group.input-expires-at,
+  .input-group.input-email,
+  .input-group.invite-max-redemptions {
+    margin-bottom: 0;
+
+    input[type="text"] {
+      width: unset;
     }
   }
 
@@ -900,6 +906,25 @@
     }
   }
 
+  .input-group.input-email {
+    align-items: baseline;
+    display: flex;
+
+    label {
+      display: inline;
+    }
+
+    .invite-input-with-button {
+      display: inline-flex;
+      flex: 1;
+
+      input[type="text"] {
+        flex: 1;
+        margin-left: 5px;
+      }
+    }
+  }
+
   .invite-max-redemptions {
     label {
       display: inline;
@@ -907,6 +932,12 @@
 
     input {
       width: 80px;
+    }
+  }
+
+  .invite-to-topic {
+    #choose-topic-title {
+      margin-bottom: 0;
     }
   }
 
