--- a/app/assets/javascripts/discourse/app/templates/mobile/users.hbs
+++ b/app/assets/javascripts/discourse/app/templates/mobile/users.hbs
@@ -17,6 +17,13 @@
           placeholderKey="directory.filter_name"
           class="filter-name no-blur"
         }}
+        {{#if currentUser.staff}}
+          {{d-button
+            icon="wrench"
+            action=(action "showEditColumnsModal")
+            class="btn-default open-edit-columns-btn"
+          }}
+        {{/if}}
       </div>
 
       {{#conditional-loading-spinner condition=model.loading}}
