Make directory table it's own component

--- a/app/assets/javascripts/discourse/app/templates/components/table-header-toggle.hbs
+++ b/app/assets/javascripts/discourse/app/templates/components/table-header-toggle.hbs
@@ -1,1 +1,4 @@
-<span class="header-contents">{{directory-table-header-title field labelKey icon translated}}{{chevronIcon}}</span>
+<span class="header-contents" id={{id}}>
+  {{directory-table-header-title field labelKey icon translated}}
+  {{chevronIcon}}
+</span>
