--- a/app/assets/javascripts/discourse/app/templates/components/table-header-toggle.hbs
+++ b/app/assets/javascripts/discourse/app/templates/components/table-header-toggle.hbs
@@ -1,4 +1,4 @@
 <span class="header-contents" id={{id}}>
-  {{directory-table-header-title field labelKey icon translated}}
+  {{directory-table-header-title field=field labelKey=labelKey icon=icon translated=translated}}
   {{chevronIcon}}
 </span>
