--- a/app/assets/javascripts/discourse/app/templates/mobile/components/directory-item.hbs
+++ b/app/assets/javascripts/discourse/app/templates/mobile/components/directory-item.hbs
@@ -15,10 +15,10 @@
     </div>
 
   {{else}}
-    {{#if (value-for-key item.user.user_fields column.user_field_id)}}
+    {{#if (get item.user.user_fields column.user_field_id)}}
       <div class="user-stat">
         <span class="value user-field">
-          {{directory-item-user-field-value item column}}
+          {{directory-item-user-field-value item=item column=column}}
         </span>
         <span class="label">
           {{column.name}}
