FEATURE: add penalty history when silencing a user

--- a/app/assets/javascripts/admin/addon/templates/modal/admin-silence-user.hbs
+++ b/app/assets/javascripts/admin/addon/templates/modal/admin-silence-user.hbs
@@ -5,6 +5,14 @@
       <div class="alert alert-error">{{errorMessage}}</div>
     {{/if}}
 
+    <div class="penalty-history">
+      <label>
+        {{i18n "admin.user.penalty_history"}}
+      </label>
+      <div class="suspended-count">{{i18n "admin.user.tl3_requirements.suspended"}}: {{user.penalty_counts.suspended}}</div>
+      <div class="silenced-count">{{i18n "admin.user.tl3_requirements.silenced"}}: {{user.penalty_counts.silenced}}</div>
+    </div>
+
     <div class="until-controls">
       <label>
         {{future-date-input
