--- a/app/assets/stylesheets/common/admin/suspend.scss
+++ b/app/assets/stylesheets/common/admin/suspend.scss
@@ -35,4 +35,9 @@
       height: 10em;
     }
   }
+  .penalty-history {
+    margin-bottom: 1em;
+    padding-bottom: 0.5em;
+    border-bottom: 1px solid var(--primary-low);
+  }
 }
