--- a/app/assets/stylesheets/mobile/menu-panel.scss
+++ b/app/assets/stylesheets/mobile/menu-panel.scss
@@ -12,14 +12,26 @@
   width: 100vw;
   position: fixed;
   background-color: black;
-  opacity: 0.5;
+  --opacity: 0.5;
+  opacity: var(--opacity);
   top: 0;
   left: 0;
   display: none;
   touch-action: pan-y pinch-zoom;
 
-  &.animate {
-    transition: opacity 0.2s ease-out;
+  @media (prefers-reduced-motion: no-preference) {
+    &.animate {
+      transition: opacity 0.1s linear;
+    }
+  }
+}
+
+.menu-panel.slide-in {
+  transform: translate(var(--offset), 0);
+  @media (prefers-reduced-motion: no-preference) {
+    &.animate {
+      transition: transform 0.1s linear;
+    }
   }
 }
 
