--- a/plugins/poll/assets/stylesheets/common/poll.scss
+++ b/plugins/poll/assets/stylesheets/common/poll.scss
@@ -31,7 +31,9 @@ div.poll {
     height: auto;
     // Hacky way to stop images without width/height
     // from causing abrupt unintended scrolling
-    &:not([width]), &:not([height]) {
+    &:not([width]),
+    &:not([height]) {
+      width: 200px !important;
       height: 200px !important;
       object-fit: contain;
     }
