FIX: Allow any other tag to be a synonym
Tag-chooser component expects an array of blocked tags, but was passed
a string instead. That made tag-chooser to not allow any tags that were
a substring of the current one.

--- a/app/assets/javascripts/discourse/app/templates/components/tag-info.hbs
+++ b/app/assets/javascripts/discourse/app/templates/components/tag-info.hbs
@@ -59,7 +59,7 @@
         {{tag-chooser
           id="add-synonyms"
           tags=newSynonyms
-          blockedTags=tagInfo.name
+          blockedTags=(array tagInfo.name)
           everyTag=true
           excludeSynonyms=true
           excludeHasSynonyms=true
