DEV: add tests for menu swipe events
correctly handle touch targets.

test is run in 50% zoom which means offsets and x of touch events need to be halved

--- a/app/assets/stylesheets/mobile/menu-panel.scss
+++ b/app/assets/stylesheets/mobile/menu-panel.scss
@@ -8,8 +8,8 @@
   }
 }
 .header-cloak {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   position: fixed;
   background-color: black;
   --opacity: 0.5;
