--- a/app/assets/javascripts/discourse/app/templates/users.hbs
+++ b/app/assets/javascripts/discourse/app/templates/users.hbs
@@ -25,33 +25,19 @@
               placeholderKey="directory.filter_name"
               class="filter-name no-blur"
             }}
+            {{#if currentUser.staff}}
+              {{d-button
+                icon="wrench"
+                action=(action "showEditColumnsModal")
+                class="btn-default open-edit-columns-btn"
+              }}
+            {{/if}}
           </div>
         </div>
 
         {{#conditional-loading-spinner condition=isLoading}}
           {{#if model.length}}
-
-            <table>
-              <thead>
-                {{table-header-toggle field="username" order=order asc=asc}}
-                {{table-header-toggle field="likes_received" order=order asc=asc icon="heart"}}
-                {{table-header-toggle field="likes_given" order=order asc=asc icon="heart"}}
-                {{table-header-toggle field="topic_count" order=order asc=asc}}
-                {{table-header-toggle field="post_count" order=order asc=asc}}
-                {{table-header-toggle field="topics_entered" order=order asc=asc}}
-                {{table-header-toggle field="posts_read" order=order asc=asc}}
-                {{table-header-toggle field="days_visited" order=order asc=asc}}
-                {{#if showTimeRead}}
-                  <th>{{i18n "directory.time_read"}}</th>
-                {{/if}}
-              </thead>
-              <tbody>
-                {{#each model as |item|}}
-                  {{directory-item item=item showTimeRead=showTimeRead}}
-                {{/each}}
-              </tbody>
-            </table>
-
+            {{directory-table items=model columns=columns showTimeRead=showTimeRead order=order asc=asc}}
             {{conditional-loading-spinner condition=model.loadingMore}}
           {{else}}
             <div class="clearfix"></div>
