--- a/app/assets/stylesheets/mobile/directory.scss
+++ b/app/assets/stylesheets/mobile/directory.scss
@@ -3,6 +3,10 @@
     font-size: $font-up-1;
   }
 
+  .open-edit-columns-btn {
+    margin: -0.7em 0 0.5em;
+  }
+
   &.users-directory {
     .filter-name {
       width: 100%;
@@ -38,6 +42,9 @@
       flex: 1 1 50%;
       .value {
         font-weight: bold;
+        &.user-field {
+          font-size: var(--font-down-1);
+        }
       }
       .label {
         margin-left: 0.2em;
@@ -48,4 +55,8 @@
       }
     }
   }
+}
+
+.edit-user-directory-columns-modal .modal-inner-container {
+  width: 90%;
 }
