--- a/app/assets/stylesheets/mobile/directory.scss
+++ b/app/assets/stylesheets/mobile/directory.scss
@@ -3,14 +3,9 @@
     font-size: $font-up-1;
   }
 
-  .open-edit-columns-btn {
-    margin: -0.7em 0 0.5em;
-  }
-
   &.users-directory {
     .filter-name {
       width: 100%;
-      margin-bottom: 1em;
     }
 
     .directory-last-updated {
@@ -59,4 +54,5 @@
 
 .edit-user-directory-columns-modal .modal-inner-container {
   width: 90%;
+  min-width: unset;
 }
