A11Y: Don't mark multiple form labels as applying to the same element (#13289)
Co-authored-by: Jordan Vidrine <jordan@jordanvidrine.com>

--- a/app/assets/javascripts/discourse/app/templates/modal/create-account.hbs
+++ b/app/assets/javascripts/discourse/app/templates/modal/create-account.hbs
@@ -35,7 +35,7 @@
                   </label>
                 {{/if}}
                 {{input-tip validation=emailValidation id="account-email-validation"}}
-                <label class="more-info" for="new-account-email">{{i18n "user.email.instructions"}}</label>
+                <span class="more-info">{{i18n "user.email.instructions"}}</span>
               </div>
 
               <div class="input-group">
@@ -53,7 +53,7 @@
                 {{/if}}
 
                 {{input-tip validation=usernameValidation id="username-validation"}}
-                <label class="more-info" for="new-account-username">{{i18n "user.username.instructions"}}</label>
+                <span class="more-info">{{i18n "user.username.instructions"}}</span>
               </div>
 
               <div class="input-group">
@@ -74,7 +74,7 @@
                   {{/if}}
 
                   {{input-tip validation=nameValidation}}
-                  <label class="more-info" for="new-account-name">{{nameInstructions}}</label>
+                  <span class="more-info">{{nameInstructions}}</span>
                 {{/if}}
               </div>
 
@@ -101,7 +101,7 @@
                   </label>
 
                   {{input-tip validation=passwordValidation}}
-                  <label class="more-info" for="new-account-password">{{passwordInstructions}}</label>
+                  <span class="more-info">{{passwordInstructions}}</span>
                   <div class="caps-lock-warning {{unless capsLockOn " hidden"}}">
                     {{d-icon "exclamation-triangle"}} {{i18n "login.caps_lock_warning"}}
                   </div>
@@ -118,7 +118,7 @@
                 <div class="input-group">
                   {{input value=inviteCode class=(value-entered inviteCode) id="inviteCode"}}
                   <label class="alt-placeholder" for="invite-code">{{i18n "user.invite_code.title"}}</label>
-                  <label class="more-info" for="invite-code">{{i18n "user.invite_code.instructions"}}</label>
+                  <span class="more-info">{{i18n "user.invite_code.instructions"}}</span>
                 </div>
               {{/if}}
 
