UX: Fix mobile progress bar button alignment

--- a/app/assets/stylesheets/common/topic-timeline.scss
+++ b/app/assets/stylesheets/common/topic-timeline.scss
@@ -123,6 +123,7 @@
         .btn-group {
           margin-bottom: 0;
           margin-right: 15px;
+          vertical-align: top;
         }
 
         .widget-component-connector {
